# glass

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  glama.json  rust-toolchain.toml  server.json
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish-mcp.yml  release.yml
crates/glass-a11y-linux/: Cargo.toml
crates/glass-a11y-linux/src/: doctor.rs  lib.rs  mapping.rs  reader.rs
crates/glass-a11y-linux/tests/: integration.rs
crates/glass-a11y-linux/tests/fixtures/: a11y_bench_fixture.py  a11y_fixture.py
crates/glass-a11y-macos/: Cargo.toml
crates/glass-a11y-macos/src/: ffi.rs  lib.rs  mapping.rs  reader.rs
crates/glass-a11y-windows/: Cargo.toml
crates/glass-a11y-windows/src/: doctor.rs  lib.rs  mapping.rs  reader.rs
crates/glass-android/: Cargo.toml
crates/glass-android/src/: a11y.rs  a11y_service.rs  adb.rs  agent.rs  avd.rs  axmap.rs  build.rs  cmd.rs  conn.rs  doctor.rs  input.rs  lib.rs  logs.rs  parse.rs  platform.rs  screencap.rs  sdk.rs  target.rs
crates/glass-android/tests/: a11y_loop.rs  a11y_service_loop.rs  agent_loop.rs  doctor_loop.rs  input_loop.rs  managed_avd.rs  see_loop.rs  window_loop.rs
crates/glass-clip-hook/: Cargo.toml
crates/glass-clip-hook/examples/: clipprobe.rs
crates/glass-clip-hook/src/: dib.rs  hglobal.rs  hook.rs  lib.rs  proto.rs  store.rs  synth.rs  text.rs
crates/glass-clip-hook/src/hook/: dataobject.rs  detour_impl.rs  ole.rs
crates/glass-clip-shim-macos/: Cargo.toml
crates/glass-clip-shim-macos/src/: lib.rs
crates/glass-core/: Cargo.toml
crates/glass-core/benches/: diff.rs  image_io.rs
crates/glass-core/benches/common/: mod.rs
crates/glass-core/src/: accessibility.rs  audit.rs  baseline.rs  capability.rs  chord.rs  coords.rs  diff.rs  doctor.rs  drag.rs  error.rs  frame.rs  image_io.rs  input.rs  keys.rs  lib.rs  logbuf.rs  marks.rs  outline.rs  pixels.rs  platform.rs  poll.rs  scroll.rs  session.rs  stability.rs  toolpath.rs  typing.rs
crates/glass-core/src/session/: a11y.rs  baseline.rs  capture.rs  clipboard.rs  input.rs  lifecycle.rs  mod.rs  test_support.rs  wait.rs  window.rs
crates/glass-dbus-linux/: Cargo.toml
crates/glass-dbus-linux/src/: lib.rs
crates/glass-dbus-linux/tests/: integration.rs
crates/glass-ios/: Cargo.toml  build.rs
crates/glass-ios/proto/: idb.proto
crates/glass-ios/src/: a11y.rs  axmap.rs  capture.rs  device.rs  doctor.rs  lib.rs  logs.rs  platform.rs  simctl.rs  target.rs
crates/glass-ios/src/idb/: client.rs  companion.rs  mod.rs
crates/glass-ios/src/injector/: keymap.rs  mod.rs
crates/glass-ios/tests/: drive_integration.rs  observe_only_integration.rs  smoke_integration.rs  startup_log_integration.rs
crates/glass-ios/tests/fixtures/: describe_nested.json
crates/glass-macos/: Cargo.toml
crates/glass-macos/fixture/: a11y_fixture.swift  quadrants.swift
crates/glass-macos/src/: axwindow.rs  backend.rs  bundle.rs  capture.rs  clipboard.rs  clipboard_route.rs  coords.rs  ffi.rs  input.rs  keymap.rs  lib.rs  menubar.rs  onboarding_window.rs  permissions.rs  process.rs  scwindow.rs  session.rs  shim_path.rs
crates/glass-macos/tests/: a11y.rs  bundle_launch.rs  capture.rs  input.rs  windows.rs
crates/glass-mcp/: Cargo.toml  build.rs
crates/glass-mcp/src/: audit.rs  capabilities.rs  cli.rs  doctor.rs  env.rs  health.rs  launch.rs  lib.rs  main.rs  menubar.rs  onboarding.rs  params.rs  server.rs  setup.rs  shutdown.rs  status.rs  tools.rs  untrusted.rs
crates/glass-mcp/src/serve/: auth.rs  config.rs  mod.rs  session_gate.rs  token.rs
crates/glass-mcp/src/tools/: batch.rs  capture.rs  clipboard.rs  input.rs  wait.rs
crates/glass-mcp/tests/: bundled_readme_links.rs  network_roundtrip.rs  release_artifact_names.rs  shutdown.rs  smoke.rs
crates/glass-mcp/tests/common/: mod.rs
crates/glass-sandbox-linux/: Cargo.toml
crates/glass-sandbox-linux/src/: lib.rs
crates/glass-testapp/: Cargo.toml
crates/glass-testapp/src/: main.rs
crates/glass-testapp/tests/: harness_smoke.rs  host_conformance.rs  ignore_regions_e2e.rs  integration.rs  network.rs  software_render.rs  verification_cost.rs  wayland.rs  wayland_ignore_regions_e2e.rs
crates/glass-testapp/tests/common/: mcp_cost.rs  mcp_ignore.rs  mod.rs
crates/glass-wayland/: Cargo.toml
crates/glass-wayland/benches/: pixels.rs
crates/glass-wayland/src/: clipboard.rs  command.rs  doctor.rs  globals.rs  input.rs  keyboard.rs  lib.rs  pixels.rs  platform.rs  swayipc.rs
crates/glass-windows/: Cargo.toml
crates/glass-windows/benches/: pixels.rs
crates/glass-windows/examples/: onbox.rs  onbox_a11y.rs  onbox_a11y_edge.rs  onbox_a11y_setvalue.rs  onbox_clipboard.rs  onbox_handoff.rs  onbox_killtree.rs  onbox_modclick.rs  onbox_windows.rs
crates/glass-windows/src/: capture.rs  clipboard.rs  discovery.rs  doctor.rs  dpi.rs  input.rs  jobcfg.rs  jobpids.rs  lib.rs  onbox_support.rs  pixels.rs  process.rs  util.rs  vkmap.rs  windows.rs
crates/glass-windows/src/containment/: build_onbox.rs  clip_onbox.rs  clip_server.rs  config.rs  mod.rs  sandboxie.rs
crates/glass-windows/src/display/: existing.rs  mod.rs
crates/glass-windows/tests/: onbox.rs
crates/glass-x11/: Cargo.toml
crates/glass-x11/benches/: pixels.rs
crates/glass-x11/src/: clipboard.rs  command.rs  coords.rs  doctor.rs  lib.rs  pixels.rs  platform.rs  xvfb.rs
docs/: README.md  running-on-linux.md  running-on-macos.md  running-on-windows.md
docs/explanation/: backends.md  (+4 more)
examples/: README.md  tasks_demo.py
packaging/: README-gnu.md  README-musl.md  README-windows.md
scripts/: bench.sh  build-bundle.sh  coverage.sh  sandbox-xvfb.sh  test-a11y-selfbus.sh  test-a11y.sh  test-macos-a11y.sh  test-macos-mcp.sh  test-macos.sh  test-wayland.sh  test-windows.sh  test-x11.sh  verification-cost.sh
tools/windows-validation/: Cargo.toml  README.md  REMOTE.md  build.rs  run-onbox.ps1  setup-box.ps1
tools/windows-validation/src/: capture.rs  dpi.rs  input.rs  main.rs  printwindow.rs  proc.rs  util.rs
(+59 files in other folders)
