[workspace]
resolver = "2"
members = ["crates/glass-core", "crates/glass-x11", "crates/glass-testapp", "crates/glass-mcp", "crates/glass-wayland", "crates/glass-a11y-linux", "crates/glass-windows", "crates/glass-a11y-windows", "crates/glass-sandbox-linux", "crates/glass-proc-linux", "crates/glass-clip-hook", "crates/glass-dbus-linux", "crates/glass-android"]
# glass-fixture-egui is intentionally excluded: heavy egui deps, only exercised by #[ignore]d
# on-box a11y tests CI can't run. Built on-demand on the box.
exclude = ["crates/glass-fixture-egui"]

[workspace.package]
edition = "2021"
# Apache-2.0 (the patent grant matters for OS-level input/capture).
# Third-party deps stay permissive (MIT/Apache, no copyleft) per CLAUDE.md.
# publish = false: open-source but not (yet) pushed to crates.io.
license = "Apache-2.0"
repository = "https://github.com/fixed-width/glass"
publish = false

# Lint gate, in-tree so `cargo clippy --workspace` enforces it without extra flags
# (CI still adds `-D warnings` to also catch rustc warnings). The `all` group sits at
# priority -1 so any specific lint override below it wins on conflict.
[workspace.lints.rust]
future_incompatible = "warn"
nonstandard_style = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }

[workspace.dependencies]
thiserror = "1"
image = { version = "0.25", default-features = false, features = ["webp"] }
tempfile = "3"
x11rb = { version = "0.13", features = ["xtest"] }
glass-android = { path = "crates/glass-android" }
glass-core = { path = "crates/glass-core" }
glass-sandbox-linux = { path = "crates/glass-sandbox-linux" }
glass-proc-linux = { path = "crates/glass-proc-linux" }
glass-wayland = { path = "crates/glass-wayland" }
glass-a11y-linux = { path = "crates/glass-a11y-linux" }
glass-dbus-linux = { path = "crates/glass-dbus-linux" }
atspi = { version = "0.30", features = ["tokio"] }
atspi-common = "0.14"
zbus = { version = "5", default-features = false, features = ["tokio"] }
tokio = { version = "1", features = ["rt", "net", "time"] }
wayland-client = "0.31"
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
wayland-protocols-misc = { version = "0.3", features = ["client"] }
# default features pull in `xkbcommon` (C lib) + `calloop` for SCTK's seat/keyboard,
# which glass-wayland doesn't use (it binds raw wl_seat + zwp_virtual_keyboard and
# generates its own XKB keymap string). Dropping them removes the libxkbcommon C
# dependency, keeping the binary free of dynamic C libs (enables fully static musl).
smithay-client-toolkit = { version = "0.20", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
roxmltree = "0.20"
rustix = { version = "1", features = ["process", "pipe", "event"] }
criterion = { version = "0.8", features = ["html_reports"] }

[profile.bench]
debug = true
