[package]
name = "glass-a11y-linux"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
glass-core.workspace = true
atspi.workspace = true
atspi-common.workspace = true
zbus.workspace = true
tokio.workspace = true

[dev-dependencies]
glass-x11 = { path = "../glass-x11" }
glass-wayland = { path = "../glass-wayland" }
tempfile.workspace = true

[lints]
workspace = true
