[package]
name = "glass-a11y-macos"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
glass-core.workspace = true

# macOS-only FFI deps (objc2 family), used by Task 4's cfg-gated reader/ffi modules. Kept
# in this target table so `mapping.rs` still builds on the Linux dev box with zero macOS
# deps. Versions/features copied verbatim from `crates/glass-macos/Cargo.toml` so
# `--locked` stays satisfiable against the already-resolved lockfile.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-application-services = { version = "0.3.2", default-features = false, features = [
    "HIServices",
    "AXUIElement",
    "AXValue",
    "AXError",
    "libc",
] }
objc2-core-foundation = { version = "0.3.2", default-features = false, features = [
    "CFArray",
    "CFString",
    "CFNumber",
    "CFCGTypes",
] }

[lints]
workspace = true
