[package]
name = "glass-android"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lib]
bench = false

[dependencies]
glass-core.workspace = true
roxmltree.workspace = true
serde_json.workspace = true

[lints]
workspace = true
