[package]
name = "glass-ios"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lib]
bench = false

[dependencies]
glass-core.workspace = true
serde_json.workspace = true
tempfile.workspace = true
image = { version = "0.25", default-features = false, features = ["png"] }
tonic.workspace = true
prost.workspace = true
tokio = { workspace = true }
tokio-stream.workspace = true

[build-dependencies]
tonic-build.workspace = true
protox.workspace = true

[lints]
workspace = true
