[package]
name = "glass-macos"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lib]
bench = false

[dependencies]
glass-core.workspace = true

# macOS-only FFI deps (objc2 family). Kept in this target table so the crate's pure
# modules still build on the Linux dev box with zero macOS deps. Versions pinned to
# exactly what `.superpowers/sdd/objc2-spike-report.md` proved compiles + runs cleanly
# (zero warnings) against the real frameworks on mini; default features are used
# throughout because each crate's default set already covers every type the spike (and
# this crate's planned Plan 2 call sequences) touch — see the report's "Crate versions
# used" table.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-foundation = "0.3.2"
objc2-app-kit = "0.3.2"
objc2-screen-capture-kit = "0.3.2"
objc2-core-graphics = "0.3.2"
objc2-core-foundation = "0.3.2"
objc2-image-io = "0.3.2"
block2 = "0.6.2"
dispatch2 = "0.3.1"

[lints]
workspace = true
