[package]
name = "glass-macos"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lib]
bench = false

# Mac-gated capture integration test (crates/glass-macos/tests/capture.rs): harness =
# false because it defines its own `fn main()` that must run on the process's true main
# thread (AppKit's `MainThreadMarker` requirement — see the file's module doc), which
# libtest's per-test worker threads can't provide.
[[test]]
name = "capture"
harness = false

# Mac-gated input integration test (crates/glass-macos/tests/input.rs) — same harness=false
# main-thread requirement as `capture` above (send_key/send_pointer reach AppKit's
# NSRunningApplication::activate); see that file's module doc.
[[test]]
name = "input"
harness = false

[dependencies]
glass-core.workspace = true

# macOS-only FFI deps (objc2 family). Kept in this target table so the crate's pure
# modules still build on the Linux dev box with zero macOS deps. Versions pinned to
# exactly what `.superpowers/sdd/objc2-spike-report.md` proved compiles + runs cleanly
# (zero warnings) against the real frameworks on mini. Each `objc2-*` framework crate
# gates its ObjC types behind per-type Cargo features; `default-features = false` +
# an explicit minimal `features` list keeps unused framework bindings (AVFoundation,
# Metal, CoreData, CloudKit, etc. — pulled in wholesale by each crate's `default`
# feature set) out of the build entirely. See `.superpowers/sdd/feature-trim-report.md`
# for how each list was derived and verified empirically on mini.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-foundation = { version = "0.3.2", default-features = false, features = [
    "NSArray",
    "NSEnumerator",
    "NSError",
    "NSString",
] }
objc2-app-kit = { version = "0.3.2", default-features = false, features = [
    "NSApplication",
    "NSResponder",
    # `NSRunningApplication` — focus-before-inject (`input.rs::focus`); `libc` unlocks its
    # `runningApplicationWithProcessIdentifier(pid: libc::pid_t)` class method.
    "NSRunningApplication",
    "libc",
] }
objc2-screen-capture-kit = { version = "0.3.2", default-features = false, features = [
    "SCShareableContent",
    "SCScreenshotManager",
    "SCStream",
    "block2",
    "libc",
    "objc2-core-foundation",
    "objc2-core-graphics",
] }
objc2-core-graphics = { version = "0.3.2", default-features = false, features = [
    "CGImage",
    "CGColorSpace",
    "CGContext",
    "CGBitmapContext",
    "objc2",
    # CGEvent mouse + keyboard injection (`input.rs`): `CGEvent` unlocks the `CGEvent`
    # module (types + constructors/`post`/`set_flags`/etc.); `CGEventSource` the
    # event-source constructor; `CGEventTypes` the `CGEventType`/`CGMouseButton`/
    # `CGEventFlags`/`CGEventField`/`CGScrollEventUnit`/`CGEventTapLocation`/
    # `CGEventSourceStateID` enums every call site here needs; `CGRemoteOperation` gates
    # `CGEvent::new_keyboard_event` (`CGEventCreateKeyboardEvent`) and its `CGKeyCode`
    # parameter type — `send_key`'s only addition over Task 2's mouse-only feature set.
    "CGEvent",
    "CGEventSource",
    "CGEventTypes",
    "CGRemoteOperation",
] }
objc2-core-foundation = { version = "0.3.2", default-features = false, features = [
    "CFCGTypes",
] }
block2 = "0.6.2"
# SIGTERM/SIGKILL for `process::terminate` — already a workspace dep (glass-wayland,
# glass-proc-linux use it on Linux); its `kill_process`/`Pid`/`Signal` are plain POSIX
# and available on macOS too.
rustix.workspace = true

[lints]
workspace = true
