[package]
name = "glass-macos"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lib]
bench = false

# Mac-gated capture integration test (crates/glass-macos/tests/capture.rs): harness =
# false because it defines its own `fn main()` that must run on the process's true main
# thread (AppKit's `MainThreadMarker` requirement — see the file's module doc), which
# libtest's per-test worker threads can't provide.
[[test]]
name = "capture"
harness = false

# Mac-gated input integration test (crates/glass-macos/tests/input.rs) — same harness=false
# main-thread requirement as `capture` above (send_key/send_pointer reach AppKit's
# NSRunningApplication::activate); see that file's module doc.
[[test]]
name = "input"
harness = false

# Mac-gated window-management integration test (crates/glass-macos/tests/windows.rs) — same
# harness=false main-thread requirement as `capture`/`input` above (list_windows/
# select_window/window/capture_frame all reach AppKit's ffi::app_kit_init()); see that
# file's module doc.
[[test]]
name = "windows"
harness = false

# Mac-gated accessibility-reader integration test (crates/glass-macos/tests/a11y.rs) — same
# harness=false main-thread requirement as `capture`/`input`/`windows` above (start_app
# reaches AppKit's ffi::app_kit_init()); drives `glass-a11y-macos`'s AXUIElement snapshot
# against the `a11y_fixture` app. See that file's module doc.
[[test]]
name = "a11y"
harness = false

# Mac-gated `.app`-bundle-launch integration test (crates/glass-macos/tests/bundle_launch.rs)
# — same harness=false main-thread requirement as `capture`/`input`/`windows`/`a11y` above
# (start_app's bundle branch reaches AppKit's ffi::app_kit_init() too); drives
# `MacosPlatform::start_app`'s direct-spawn/NSWorkspace-handoff/fail-closed paths against a
# built `Demo.app` fixture and the stock `TextEdit.app`. See that file's module doc.
[[test]]
name = "bundle_launch"
harness = false

[dependencies]
glass-core.workspace = true
plist = "1"

# macOS-only FFI deps (objc2 family). Kept in this target table so the crate's pure
# modules still build on the Linux dev box with zero macOS deps. Versions pinned to
# exactly what `.superpowers/sdd/objc2-spike-report.md` proved compiles + runs cleanly
# (zero warnings) against the real frameworks on mini. Each `objc2-*` framework crate
# gates its ObjC types behind per-type Cargo features; `default-features = false` +
# an explicit minimal `features` list keeps unused framework bindings (AVFoundation,
# Metal, CoreData, CloudKit, etc. — pulled in wholesale by each crate's `default`
# feature set) out of the build entirely. See `.superpowers/sdd/feature-trim-report.md`
# for how each list was derived and verified empirically on mini.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-foundation = { version = "0.3.2", default-features = false, features = [
    "NSArray",
    "NSEnumerator",
    "NSError",
    "NSString",
    # `NSURL` — `ffi.rs::launch_bundle`'s `NSURL::fileURLWithPath`, building the file URL
    # `NSWorkspace.openApplicationAtURL:...` takes.
    "NSURL",
] }
objc2-app-kit = { version = "0.3.2", default-features = false, features = [
    "NSApplication",
    "NSResponder",
    # `NSRunningApplication` — focus-before-inject (`input.rs::focus`), plus the
    # bundle-launch adopt/terminate FFI (`ffi.rs::running_pid_for_bundle_id`/`terminate_app`);
    # `libc` unlocks its `runningApplicationWithProcessIdentifier(pid: libc::pid_t)` class
    # method.
    "NSRunningApplication",
    # `NSWorkspace` — `ffi.rs::launch_bundle`'s `NSWorkspace.openApplication(at:configuration:
    # completionHandler:)`. Also gates `NSWorkspaceOpenConfiguration` (header-translator
    # generates both types into the same `NSWorkspace.rs` file, and the whole file is gated
    # by this one feature — there is no separate `NSWorkspaceOpenConfiguration` feature to
    # request). `block2` additionally gates the completion-handler method itself (its own
    # `cfg(all(feature = "NSRunningApplication", feature = "block2"))`).
    "NSWorkspace",
    # `NSPasteboard` — the general pasteboard read/write behind `Platform`'s clipboard seam
    # (`clipboard.rs`): unlocks `NSPasteboard`, its `generalPasteboard`/`clearContents`/
    # `stringForType`/`setString:forType:` methods, and the `NSPasteboardTypeString` constant.
    "NSPasteboard",
    "libc",
    "block2",
] }
objc2-screen-capture-kit = { version = "0.3.2", default-features = false, features = [
    "SCShareableContent",
    "SCScreenshotManager",
    "SCStream",
    "block2",
    "libc",
    "objc2-core-foundation",
    "objc2-core-graphics",
] }
objc2-core-graphics = { version = "0.3.2", default-features = false, features = [
    "CGImage",
    "CGColorSpace",
    "CGContext",
    "CGBitmapContext",
    "objc2",
    # CGEvent mouse + keyboard injection (`input.rs`): `CGEvent` unlocks the `CGEvent`
    # module (types + constructors/`post`/`set_flags`/etc.); `CGEventSource` the
    # event-source constructor; `CGEventTypes` the `CGEventType`/`CGMouseButton`/
    # `CGEventFlags`/`CGEventField`/`CGScrollEventUnit`/`CGEventTapLocation`/
    # `CGEventSourceStateID` enums every call site here needs; `CGRemoteOperation` gates
    # `CGEvent::new_keyboard_event` (`CGEventCreateKeyboardEvent`) and its `CGKeyCode`
    # parameter type — `send_key`'s only addition over Task 2's mouse-only feature set.
    "CGEvent",
    "CGEventSource",
    "CGEventTypes",
    "CGRemoteOperation",
] }
objc2-core-foundation = { version = "0.3.2", default-features = false, features = [
    "CFCGTypes",
    # axwindow.rs: CFArray for kAXWindowsAttribute's element array (CFArray<AXUIElement>);
    # CFString for AX attribute/action name literals (CFString::from_str — see
    # axwindow.rs's module doc for why these aren't sourced from
    # objc2-application-services's own constants features); CFNumber for
    # CFBoolean/kCFBooleanTrue (kAXMainAttribute's set value; also session.rs's
    # CGSSessionScreenIsLocked reader). CFDictionary: session.rs reads
    # CGSessionCopyCurrentDictionary's CFDictionary<CFString, CFType>.
    "CFArray",
    "CFString",
    "CFNumber",
    "CFDictionary",
] }
# axwindow.rs: AXUIElement (window enumeration/attribute get+set/actions), AXValue
# (position/size as CGPoint/CGSize), AXError (the shared failure type every AX call
# returns). `HIServices` is the umbrella feature gating the whole generated module tree
# those three live under (crates.io's per-type features only pick which files *inside*
# HIServices compile in — the module itself doesn't exist without it; found by reading
# `src/generated/mod.rs`'s `#[cfg(feature = "HIServices")] pub use self::__HIServices::*;`
# after `AXUIElement`/`AXValue`/`AXError` alone failed to resolve). `libc` unlocks
# AXUIElement::new_application(pid: libc::pid_t) — our own `i32` pid coerces to it directly
# via the type alias, same as objc2-app-kit's `libc` feature above; no direct `libc`
# dependency needed here. Deliberately NOT AXAttributeConstants/AXActionConstants/
# AXRoleConstants: reading the generated source shows header-translator produced EMPTY
# files for all three (no kAX*Attribute/kAX*Action symbols at all) — axwindow.rs declares
# those attribute/action name strings itself instead (see its module doc).
objc2-application-services = { version = "0.3.2", default-features = false, features = [
    "HIServices",
    "AXUIElement",
    "AXValue",
    "AXError",
    "libc",
] }
block2 = "0.6.2"
# SIGTERM/SIGKILL for `process::terminate` — already a workspace dep (glass-wayland,
# glass-proc-linux use it on Linux); its `kill_process`/`Pid`/`Signal` are plain POSIX
# and available on macOS too.
rustix.workspace = true
# Seatbelt process containment (`process.rs::spawn`'s `SandboxLevel::Default`/`Strict`
# pre_exec): the pure SBPL generator (`build_profile`) plus the macOS-only `sandbox_init`
# FFI (`apply_cstr`).
glass-sandbox-macos.workspace = true

[dev-dependencies]
tempfile.workspace = true

# Mac-only: the accessibility-reader integration test (tests/a11y.rs) drives the standalone
# `glass-a11y-macos` snapshot. Kept in the cfg(macos) dev-dep table so the crate still
# builds/tests on the Linux dev box (where the cfg(macos) test is a bare skip `main`).
[target.'cfg(target_os = "macos")'.dev-dependencies]
glass-a11y-macos.workspace = true

[lints]
workspace = true
