[package]
name = "glass-sandbox-linux"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
glass-core.workspace = true
glass-sandbox-core.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
