[package]
name = "glass-wayland"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
glass-core.workspace = true
glass-sandbox-linux.workspace = true
glass-proc-linux.workspace = true
wayland-client.workspace = true
wayland-protocols-wlr.workspace = true
wayland-protocols-misc.workspace = true
smithay-client-toolkit.workspace = true
serde = { workspace = true }
serde_json.workspace = true
tempfile.workspace = true
rustix.workspace = true
