[package]
name = "glass-wayland"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

# Don't run the lib's unit-test harness under `cargo bench` — it can't parse
# criterion args (e.g. --save-baseline) and only the [[bench]] targets matter.
[lib]
bench = false

[dependencies]
glass-core.workspace = true
glass-dbus-linux = { path = "../glass-dbus-linux" }
glass-sandbox-linux.workspace = true
glass-proc-linux.workspace = true
wayland-client.workspace = true
wayland-protocols-wlr.workspace = true
wayland-protocols-misc.workspace = true
smithay-client-toolkit.workspace = true
serde = { workspace = true }
serde_json.workspace = true
tempfile.workspace = true
rustix.workspace = true

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "pixels"
harness = false

[lints]
workspace = true
